fix(tooltip): invisible progress indicator
https://github.com/Trendyol/baklava/issues/644

--- a/src/components/tooltip/bl-tooltip.css
+++ b/src/components/tooltip/bl-tooltip.css
@@ -3,7 +3,7 @@
 }
 
 .trigger {
-  display: var(--bl-tooltip-trigger-display, inline-flex);
+  display: var(--bl-tooltip-trigger-display, inline);
   cursor: pointer;
 }
 
